2012-04-19  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/setup/setup.php: Changed timezone by default.

2012-04-19  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/tree.php: Changes in tab os.

2012-04-19  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/setup/setup.php
	  index.php
	  pandora_db.sql
	  pandoradb_data.sql: Changed timezone setup. 

2012-04-18 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php, extensions/update_manager.php,
	extensions/update_manager/lib/functions.php: fixed the first
	intallation of update manager.
	
	Merged from the branch "pandora_4.0".

2012-04-18  Sancho Lerena <slerena@artica.es>

        * operation/servers/recon_view.php: Fix	column header.

        * godmode/agentes/module_manager_editor_plugin.php: Now	plugin description
        is shown formatted (\n -> <br>). Some fields have better layout.

        * godmode/servers/plugin.php: Ajax load	of description is now formatted.

        * godmode/servers/manage_recontask.php:	Fix link to show recon server.

        * godmode/servers/manage_recontask_form.php: Wider textarea.

        * pandoradb_data.sql: New defaults (4 plugins, 2 recon scripts).

        * include/functions_events.php:	More space visible in event info, smaller
        font.

        * include/config_process.php: Updated version.

2012-04-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/pandora_minimal.css
	 include/javascript/pandora.js
	 operation/agentes/stat_win.php: Changed layout of interactive graph
	 menu.
	
	* images/graphmenu_arrow.png
	 images/graphmenu_arrow_hide.png: Added images for interactive 
	 graph menu.
	 
	 Merged from branches.

2012-04-18 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_agents.php: into the function
	"agents_get_agent_id" the parameter "$io_safe_input" for transform
	the names if true, by default false.
	
	* operation/agentes/networkmap.topology.php,